revertTitlebar - fix overlapping header toolbar in activity feed

--- a/revertTitlebar/themefile.css
+++ b/revertTitlebar/themefile.css
@@ -49,11 +49,13 @@ div[class*="titleBar-"] div:nth-of-type(4) {
 }
 
 .chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-'],
-#friends [class*='flex-'] [class*='flex-']:last-of-type {
+#friends [class*='flex-'] [class*='flex-']:last-of-type,
+[class*='activityFeed-'] [class*='flex-'] [class*='flex-']:last-of-type {
     margin-right: 98px;
 }
 .chat [class*='titleWrapper-'] [class*='flex-'] [class*='flex-']:after,
-#friends [class*='flex-'] [class*='flex-']:last-of-type:after {
+#friends [class*='flex-'] [class*='flex-']:last-of-type:after,
+[class*='activityFeed-'] [class*='flex-'] [class*='flex-']:last-of-type:after {
     content: '';
     width: 1px;
     height: 22px;
